# LinScale-Cuda

./: .gitignore  CMakeLists.txt  README.MD  build.sh  clean_results.py  data.csv  data.xlsx  main.cu  out.txt  reproduce_q_and_r.sh  reproduce_r.sh  setup.sh  setup_qr.sh  setup_svd.sh
header/: compute.h  cuda_util.h  matrix.h  matrix_cuda.h  matrix_cuda_general.h  matrix_mkl.h  model.h  table.h  types.h
results/: 100x128,100x128cuSolverS  100x16,100x16CUDA  100x16,100x16LinScale  100x16,100x16LinScaleS  100x16,200x16CUDA  100x16,200x16LinScale  100x16,400x16CUDA  100x16,400x16LinScale  100x16,800x16CUDA  100x16,800x16LinScale  100x2,100x2CUDA  100x2,100x2LinScale  100x2,200x2LinScale  100x2,400x2CUDA  100x2,400x2LinScale  100x2,800x2CUDA  100x32,100x32CUDA  100x32,100x32LinScale  100x32,100x32LinScaleS  100x32,200x32CUDA  100x32,200x32LinScale  100x32,400x32CUDA  100x32,400x32LinScale  100x32,800x32CUDA  100x32,800x32LinScale  100x4,100x4CUDA  100x4,100x4LinScale  100x4,100x4LinScaleS  100x4,200x4CUDA  100x4,200x4LinScale  100x4,400x4CUDA  100x4,400x4LinScale  100x4,800x4CUDA  100x4,800x4LinScale  100x64,100x64CUDA  100x64,100x64LinScale  100x64,100x64LinScaleS  100x64,200x64CUDA  100x64,200x64LinScale  100x64,400x64CUDA  (+177 more)
runtimes/2070/QR/: data_accuracy.csv  data_accuracy.xlsx  data_memory.csv  data_memory.xlsx  data_runtimes_r.csv  data_runtimes_r.xlsx
runtimes/4080/: data.csv  data.xlsx
runtimes/4080/qr/: data.xlsx
runtimes/4080/svd/: data.csv
runtimes/svd/: data.xlsx
scripts/: clean_results.py  qr.py
src/: cuda_util.cu  main.cpp  main.cu  matrix_cuda.cu  matrix_mkl.cpp
